# kcraft

./: .gitignore  .gitmodules  AGENT.md  AGENTS.md  BEST_PRACTICES.md  BUILD.md  CHANGELOG.md  CODEOWNERS  COPYING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  deny.toml  flake.nix
.antigravitycli/: af62bb01-10b2-43b7-b1a7-7d69ec991285.json
.ci/: configure.sh  jre.sh  pack.sh
.ci/codeql/: deps.sh
.ci/linux/: deps.sh  package.sh
.ci/macos/: deps.sh  package.sh
.ci/windows/: package.sh
.githooks/: pre-push
.github/: FUNDING.yml  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  rfc.yml  suggestion.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  ci.yml  release-drafter.yml  release-plz.yml  release.yml  rust.yml  security.yml  signoff.yml  tauri-release.yml  trigger_builds.yml  trigger_release.yml  winget.yml
.github/workflows/setup/: action.yml
.opencode/: rename.py
changelog/: v1.0.0.md
config/: DEFAULT.yml
crates/auth/: CHANGELOG.md  Cargo.toml
crates/auth/src/: authlib_injector.rs  flow.rs  lib.rs  offline.rs  yggdrasil.rs
crates/auth/src/account_list/: account.rs  list.rs  serialize.rs  util.rs
crates/auth/src/msa/: device.rs  flow.rs  token.rs
crates/auth/src/parsers/: entitlement.rs  mod.rs  profile.rs  token.rs
crates/auth/tests/: integration.rs
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: main.rs
crates/config/: CHANGELOG.md  Cargo.toml
crates/config/src/: ini.rs  lib.rs  settings_object.rs  yaml.rs
crates/controller/: Cargo.toml
crates/controller/src/: lib.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: build_config.rs  build_config.yaml  crash.rs  lib.rs  portable.rs  runtime.rs  theme.rs  version.rs
crates/core/src/account/: types.rs
crates/core/src/settings/: value.rs
crates/core/src/task/: concurrent.rs  multiple_options.rs  runner.rs
crates/fs/: CHANGELOG.md  Cargo.toml
crates/gui/: CHANGELOG.md  Cargo.toml
crates/gui/src/: jvm_args.rs  lib.rs  main.rs  net_events.rs
crates/gui/src/accounts/: mod.rs  msa.rs
crates/gui/src/instances/: mod.rs
crates/gui/src/modpack/: mod.rs
crates/gui/ui/: app.slint  dialogs.slint  instances.slint  theme.slint
crates/http-cache/: CHANGELOG.md  Cargo.toml
crates/http-cache/src/: lib.rs
crates/java/: CHANGELOG.md  Cargo.toml
crates/java/src/: download.rs  install.rs  lib.rs
crates/java/src/utils/: mod.rs
crates/kcraft/: Cargo.toml
crates/kcraft-auth/: Cargo.toml
crates/kcraft-auth/src/: account_list.rs  authlib_injector.rs  flow.rs  lib.rs  msa.rs  offline.rs  parsers.rs  yggdrasil.rs
crates/kcraft-auth/src/account_list/: account.rs  mod.rs  util.rs
crates/kcraft-auth/src/msa/: mod.rs  token.rs
crates/kcraft-auth/tests/: integration.rs
crates/kcraft-config/: Cargo.toml
crates/kcraft-config/src/: ini.rs  lib.rs  setting.rs  settings_object.rs
crates/kcraft-core/src/: account.rs  build_config.rs  lib.rs  require.rs  runtime.rs  session.rs  settings.rs  task.rs  version.rs
crates/kcraft-fs/: Cargo.toml
crates/kcraft-fs/src/: lib.rs
crates/kcraft-gui/: Cargo.toml
crates/kcraft-gui/frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json
crates/kcraft-gui/src/: accounts.rs  data_root.rs  instances.rs  main.rs  modpack.rs
crates/kcraft-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/kcraft-gui/src-tauri/icons/: icon.icns
crates/kcraft-gui/src-tauri/src/: main.rs
crates/kcraft-gui/ui/: accounts.slint  modpack.slint  progress.slint
crates/kcraft-http-cache/: Cargo.toml
crates/kcraft-http-cache/src/: lib.rs
crates/kcraft-java/: Cargo.toml
crates/kcraft-java/src/: checker.rs  install.rs  lib.rs  utils.rs  version.rs
crates/kcraft-java/src/utils/: default.rs  env.rs  finder.rs
crates/kcraft-logging/: Cargo.toml
crates/kcraft-logging/src/: lib.rs
crates/kcraft-minecraft/: Cargo.toml
crates/kcraft-minecraft/src/: agent.rs  assets.rs  component.rs  gradle_specifier.rs  instance.rs  instance_list.rs  instance_task.rs  launch.rs  launch_profile.rs  lib.rs  library.rs  meta.rs  mojang_download_info.rs  resolver.rs  resource.rs  rule.rs  update.rs  version_file.rs  version_filter_data.rs  world.rs
crates/kcraft-net/: Cargo.toml
crates/kcraft-net/src/: download.rs  lib.rs  net_job.rs  sink.rs  upload.rs  validator.rs
crates/kcraft-net/src/sink/: meta_cache.rs
crates/kcraft/src/: main.rs
crates/logging/: CHANGELOG.md  Cargo.toml
crates/logging/src/: lib.rs
crates/minecraft/: CHANGELOG.md  Cargo.toml
crates/minecraft/src/: clone.rs  cloud_sync.rs  gradle_specifier.rs  import.rs  launch_profile.rs  lib.rs  library.rs  mod_update.rs  quilt.rs  resource_pack.rs  rule.rs  scripts.rs  server_export.rs  shader_pack.rs  version_filter_data.rs
crates/minecraft/src/component/: component_type.rs  utils.rs
crates/minecraft/src/instance/: config.rs  launch.rs  paths.rs  server_target.rs
crates/minecraft/src/instance_list/: loading.rs
crates/minecraft/src/instance_task/: copy.rs  creation.rs  import.rs
crates/minecraft/src/launch/steps/: direct.rs  mod.rs  setup.rs
crates/minecraft/src/meta/: mod.rs  parsers.rs
crates/minecraft/src/modplatform/: atlauncher.rs  download_task.rs  mod.rs  mod_index.rs  modrinth.rs  version_filter.rs
crates/minecraft/src/resource/: enums.rs  mod.rs  pack.rs  texture.rs
crates/minecraft/src/update/: download.rs  mod.rs
crates/minecraft/src/version_file/: mod.rs  mojang_serde.rs
crates/minecraft/src/world/: backup.rs  info.rs  list.rs  mod.rs  model.rs
crates/net/: CHANGELOG.md  Cargo.toml
crates/net/src/: download.rs  upload.rs  validator.rs
crates/net/src/sink/: base.rs  byte_array.rs  file.rs  meta_cache.rs  mod.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
crates/updater/: CHANGELOG.md  Cargo.toml
crates/updater/src/: lib.rs
docs/: AGENTS.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  GUIDELINES.md  ROADMAP.md  agenda.md  build.md  changelog.md  contributing.md  guidelines.md  roadmap.md
nix/: NIX.md  default.nix  unwrapped.nix
(+56 files in other folders)
