[workspace]
resolver = "2"
members = [
    "crates/kcraft-core",
    "crates/kcraft-logging",
    "crates/kcraft-fs",
    "crates/kcraft-config",
    "crates/kcraft-net",
    "crates/kcraft-http-cache",
    "crates/kcraft-auth",
    "crates/kcraft-java",
    "crates/kcraft-minecraft",
    "crates/kcraft",
    "crates/kcraft-gui/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
thiserror = "2"
uuid = { version = "1", features = ["v3", "v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "cookies", "blocking"] }
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
md-5 = "0.11"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
tempfile = "3"
zip = "4"
flate2 = "1"
toml = "0.8"
walkdir = "2"
path-clean = "1"
filetime = "0.2"
which = "7"
fs2 = "0.4"
once_cell = "1"
regex = "1"

# Local workspace crate dependencies
kcraft-core = { path = "crates/kcraft-core" }
kcraft-logging = { path = "crates/kcraft-logging" }
kcraft-config = { path = "crates/kcraft-config" }
kcraft-net = { path = "crates/kcraft-net" }
kcraft-java = { path = "crates/kcraft-java" }
kcraft-minecraft = { path = "crates/kcraft-minecraft" }
