[workspace]
resolver = "2"
members = [
    # Core
    "crates/core",
    "crates/logging",
    "crates/fs",
    "crates/config",
    "crates/http-cache",
    # Networking
    "crates/net",
    # Auth
    "crates/auth",
    # Game
    "crates/java",
    "crates/minecraft",
    # CLI entry point
    "crates/cli",
    # GUI
    "crates/gui",
    # Updater
    "crates/updater",
]

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
thiserror = "2"
uuid = { version = "1", features = ["v3", "v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.13", features = ["json", "gzip", "brotli", "cookies", "blocking"] }
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
md-5 = "0.11"
sha1 = "0.11"
sha2 = "0.11"
hex = "0.4"
base64 = "0.22"
tempfile = "3"
zip = "8"
flate2 = "1"
toml = "0.8"
walkdir = "2"
path-clean = "1"
filetime = "0.2"
which = "8"
fs2 = "0.4"
once_cell = "1"
regex = "1"
tar = "0.4"

# Local workspace crate dependencies
app_core = { package = "core", path = "crates/core" }
logging = { path = "crates/logging" }
config = { path = "crates/config" }
net = { path = "crates/net" }
java = { path = "crates/java" }
minecraft = { path = "crates/minecraft" }
updater = { path = "crates/updater" }
controller = { path = "crates/controller" }
plugin = { path = "crates/plugin" }
