[package]
name = "kcraft-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
hex = { workspace = true }
sha1 = { workspace = true }
md-5 = { workspace = true }
base64 = { workspace = true }
kcraft-core = { path = "../core" }
kcraft-net = { path = "../net" }
kcraft-fs = { path = "../fs" }
