[package]
name = "auth"
version.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
hex = { workspace = true }
sha1 = { workspace = true }
md-5 = { workspace = true }
base64 = { workspace = true }
app_core = { package = "core", path = "../core" }
net = { path = "../net" }
fs = { path = "../fs" }
