[package]
name = "kcraft"
version.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
app_core = { package = "core", path = "../core" }
logging = { path = "../logging" }
fs = { path = "../fs" }
config = { path = "../config" }
net = { path = "../net" }
http-cache = { path = "../http-cache" }
auth = { path = "../auth" }
minecraft = { path = "../minecraft" }
tokio = { workspace = true }
tracing = { workspace = true }
