[package]
name = "kcraft-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
slint = "1.16"
tracing.workspace = true
dirs = "6"
rfd = "0.17"
tokio.workspace = true
kcraft-core.workspace = true
kcraft-logging.workspace = true
kcraft-net.workspace = true
kcraft-java.workspace = true
kcraft-minecraft.workspace = true
kcraft-auth = { path = "../auth" }

[build-dependencies]
slint-build = "1.16"
