[package]
name = "gui"
version.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
slint = "1.16"
tracing.workspace = true
dirs = "6"
rfd = "0.17"
tokio.workspace = true
app_core.workspace = true
logging.workspace = true
net.workspace = true
java.workspace = true
minecraft.workspace = true
auth = { path = "../auth" }

[build-dependencies]
slint-build = "1.16"
