[package]
name = "kcraft-java"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
regex = "1"
shell-words = "1"
kcraft-core = { path = "../core" }
kcraft-fs = { path = "../fs" }
kcraft-net = { path = "../net" }
tempfile = { workspace = true }
flate2 = { workspace = true }
tar = "0.4"
reqwest = { workspace = true }
url = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
