[package]
name = "java"
version.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
regex = "1"
shell-words = "1"
app_core = { package = "core", path = "../core" }
fs = { path = "../fs" }
net = { path = "../net" }
tempfile = { workspace = true }
flate2 = { workspace = true }
tar = "0.4"
reqwest = { workspace = true }
url = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
