[package]
name = "kcraft-java"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
regex = "1"
shell-words = "1"
kcraft-core = { path = "../kcraft-core" }
kcraft-fs = { path = "../kcraft-fs" }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
