[package]
name = "kcraft"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kcraft-core = { path = "../kcraft-core" }
kcraft-logging = { path = "../kcraft-logging" }
kcraft-fs = { path = "../kcraft-fs" }
kcraft-config = { path = "../kcraft-config" }
kcraft-net = { path = "../kcraft-net" }
kcraft-http-cache = { path = "../kcraft-http-cache" }
kcraft-auth = { path = "../kcraft-auth" }
kcraft-minecraft = { path = "../kcraft-minecraft" }
tokio = { workspace = true }
tracing = { workspace = true }
