[package]
name = "kcraft-minecraft"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
regex = "1"
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }
once_cell = { workspace = true }
kcraft-core = { path = "../core" }
kcraft-fs = { path = "../fs" }
kcraft-net = { path = "../net" }
kcraft-http-cache = { path = "../http-cache" }
kcraft-java = { path = "../java" }
zip = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
flate2 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dirs = "6.0.0"
