[package]
name = "minecraft"
version.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
regex = "1"
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
walkdir.workspace = true
once_cell = { workspace = true }
app_core = { package = "core", path = "../core" }
fs = { path = "../fs" }
net = { path = "../net" }
http-cache = { path = "../http-cache" }
java = { path = "../java" }
zip.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
flate2 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dirs = "6.0.0"
tar = { workspace = true }
