[package]
name = "net"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
md-5 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
futures-util = "0.3"
app_core = { package = "core", path = "../core" }
http-cache = { path = "../http-cache" }
fs = { path = "../fs" }
lazy_static = "1.5.0"
