[package]
name = "plugin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
app_core = { package = "core", path = "../core" }
minecraft = { path = "../minecraft" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
