[package]
name = "updater"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
app_core = { package = "core", path = "../core" }
net = { path = "../net" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
md-5 = { workspace = true }
