[package]
name = "kcraft-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
kcraft-core.workspace = true
kcraft-logging.workspace = true
kcraft-config.workspace = true
kcraft-net.workspace = true
kcraft-java.workspace = true
kcraft-minecraft.workspace = true
kcraft-auth = { path = "../../kcraft-auth" }
dirs = "6"
tauri-plugin-updater = "2.0.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
